@@ -38,14 +38,14 @@ extern __inline void
 __attribute__((__gnu_inline__, __always_inline__, __artificial__))
 _fxsave (void *__P)
 {
-  return __builtin_ia32_fxsave (__P);
+  __builtin_ia32_fxsave (__P);
 }
 
 extern __inline void
 __attribute__((__gnu_inline__, __always_inline__, __artificial__))
 _fxrstor (void *__P)
 {
-  return __builtin_ia32_fxrstor (__P);
+  __builtin_ia32_fxrstor (__P);
 }
 
 #ifdef __x86_64__
@@ -53,14 +53,14 @@ extern __inline void
 __attribute__((__gnu_inline__, __always_inline__, __artificial__))
 _fxsave64 (void *__P)
 {
-    return __builtin_ia32_fxsave64 (__P);
+  __builtin_ia32_fxsave64 (__P);
 }
 
 extern __inline void
 __attribute__((__gnu_inline__, __always_inline__, __artificial__))
 _fxrstor64 (void *__P)
 {
-    return __builtin_ia32_fxrstor64 (__P);
+  __builtin_ia32_fxrstor64 (__P);
 }
 #endif
 
